--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,5 @@
+# /my-app/server/Dockerfile
+
 # Start with a base image containing Node.js runtime
 FROM node:lts AS development
 
@@ -13,11 +15,11 @@ RUN npm install
 # Copy everything else to /app
 COPY . .
 
-# Build the app
+# Compile the TypeScript code
 RUN npm run build
 
 # Expose port 3000 to the outside
-EXPOSE 3000
+EXPOSE 4000
 
 # Run the app when the container is started
 CMD ["npm", "start"]
